# caesura

./: .dockerignore  .gitignore  BUILD.md  COMMANDS.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.yml
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs  main.rs  prelude.rs  testing_prelude.rs
crates/core/src/commands/: arguments_parser.rs  command.rs  command_arguments.rs  command_trait.rs  hooks.rs  mod.rs  release_description.rs  torrent_injection.rs
crates/core/src/commands/audit/: audit_command.rs  audit_issue.rs  audit_item.rs  audit_suggestion.rs  audit_summary.rs  audit_torrent.rs  bencode_adapter.rs  decoded_string.rs  libtorrent_decoder.rs  mod.rs  raw_string.rs  torrent_auditor.rs  torrent_parser.rs
crates/core/src/commands/batch/: batch_action.rs  batch_command.rs  mod.rs
crates/core/src/commands/config/: config_action.rs  config_command.rs  mod.rs
crates/core/src/commands/cross/: cross_command.rs  mod.rs
crates/core/src/commands/docs/: docs_command.rs  mod.rs
crates/core/src/commands/inspect/: format.rs  inspect_action.rs  inspect_arg.rs  inspect_command.rs  inspect_factory.rs  mod.rs  picture_info.rs  track_info.rs
crates/core/src/commands/publish/: mod.rs  publish_action.rs  publish_arg.rs  publish_command.rs  publish_manifest.rs
crates/core/src/commands/queue/: mod.rs  queue.rs  queue_action.rs  queue_add_command.rs  queue_fetch_command.rs  queue_item.rs  queue_list_command.rs  queue_rm_command.rs  queue_status.rs  queue_summary.rs  queue_summary_command.rs  timestamp.rs
crates/core/src/commands/spectrogram/: mod.rs  size.rs  spectrogram_action.rs  spectrogram_command.rs  spectrogram_job.rs  spectrogram_job_factory.rs  spectrogram_status.rs
crates/core/src/commands/test_name/: mod.rs  test_name_command.rs
crates/core/src/commands/transcode/: additional_job.rs  additional_job_factory.rs  command_info.rs  decode.rs  encode.rs  include.rs  mod.rs  resample.rs  resize.rs  streaminfo_helpers.rs  transcode_action.rs  transcode_command.rs  transcode_job.rs  transcode_job_factory.rs  transcode_status.rs  variant.rs
crates/core/src/commands/upload/: mod.rs  upload_action.rs  upload_command.rs  upload_status.rs
crates/core/src/dependencies/: binaries.rs  mod.rs  sox_factory.rs
crates/core/src/hosting/: build_error.rs  host.rs  host_builder.rs  mod.rs  shutdown.rs
crates/core/src/options/: arguments_provider.rs  audit_args.rs  audit_options.rs  batch_options.rs  cache_options.rs  command.rs  config_options.rs  copy_options.rs  cross_config_options.rs  cross_options.rs  doc_metadata.rs  file_options.rs  indexer.rs  mod.rs  name_options.rs  options_provider.rs  options_registration.rs  options_trait.rs  options_validator_ext.rs  publish_seeding_options.rs  qbit_cross_options.rs  qbit_options.rs  qbit_upload_options.rs  queue_add_args.rs  queue_fetch_options.rs  queue_rm_args.rs  report_options.rs  rules.rs  runner_options.rs  shared_options.rs  source_arg.rs  sox_options.rs  spectrogram_options.rs  target_options.rs  torrent_injection_options.rs  upload_options.rs  verify_options.rs
crates/core/src/utils/: app_info.rs  diagnostic_ext.rs  gazelle_error_ext.rs  github_release.rs  hyperlink.rs  logging.rs  mod.rs  platform.rs
crates/core/src/utils/diff/: mod.rs  (+3 more)
crates/macros/: Cargo.toml
crates/macros/src/: docs.rs  generate.rs  lib.rs  parse.rs  tests.rs
crates/macros/src/command/: generate.rs  mod.rs  parse.rs
crates/macros/src/options/: docs.rs  generate.rs  mod.rs  parse.rs
crates/macros/src/snapshots/: caesura_macros__tests__expand_all_field_types.snap  caesura_macros__tests__expand_batch_options.snap  caesura_macros__tests__expand_cache_options.snap  caesura_macros__tests__expand_command_enum_primary.snap  caesura_macros__tests__expand_command_enum_sub.snap  caesura_macros__tests__expand_copy_options.snap  caesura_macros__tests__expand_file_options.snap  caesura_macros__tests__expand_name_options.snap  caesura_macros__tests__expand_no_commands.snap  caesura_macros__tests__expand_publish_seeding_options.snap  caesura_macros__tests__expand_runner_options.snap  caesura_macros__tests__expand_shared_options.snap  caesura_macros__tests__expand_spectrogram_options.snap  caesura_macros__tests__expand_target_options.snap  caesura_macros__tests__expand_torrent_injection_options.snap  caesura_macros__tests__expand_upload_options.snap  caesura_macros__tests__expand_verify_options.snap  caesura_macros__tests__expand_with_custom_arg_attrs.snap  caesura_macros__tests__expand_with_custom_partial_name.snap  caesura_macros__tests__expand_with_default_fn.snap  caesura_macros__tests__expand_with_defaults_fn.snap
crates/options/: Cargo.toml
crates/options/src/: args_provider.rs  command_trait.rs  doc_metadata.rs  lib.rs  option_issue.rs  options_provider.rs  options_registration.rs  options_trait.rs  options_validator.rs  rules.rs
crates/options/src/snapshots/: caesura_options__option_issue__tests__option_issue_display_cli_argument_invalid.snap  caesura_options__option_issue__tests__option_issue_display_config_invalid.snap  caesura_options__option_issue__tests__option_issue_display_default_changed.snap  caesura_options__option_issue__tests__option_issue_display_dependency_missing.snap  caesura_options__option_issue__tests__option_issue_display_directory_not_found.snap  caesura_options__option_issue__tests__option_issue_display_duration_invalid.snap  caesura_options__option_issue__tests__option_issue_display_file_not_found.snap  caesura_options__option_issue__tests__option_issue_display_hash_invalid.snap  caesura_options__option_issue__tests__option_issue_display_path_not_found.snap  caesura_options__option_issue__tests__option_issue_display_required.snap  caesura_options__option_issue__tests__option_issue_display_required_non_empty.snap  caesura_options__option_issue__tests__option_issue_display_required_one_of.snap  caesura_options__option_issue__tests__option_issue_display_url_invalid_multiple_reasons.snap  caesura_options__option_issue__tests__option_issue_display_url_invalid_scheme.snap
(+622 files in other folders)
