[package]
name = "red_oxide"
version = "0.8.2"
edition = "2021"
build = "build.rs"
authors = ["DevYukine devyukine@gmx.de"]
description = "A simple helper while uploading music to redacted.ch"
homepage = "https://github.com/DevYukine/red_oxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
console = "^0.15"
indicatif = "^0.17"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0.1"
serde_derive = "^1"
thiserror = "^1"
tokio = { version = "^1", features = ["full"] }
regex = "^1"
audiotags = "^0.5"
log = { version = "^0.4", features = ["std"] }
num_cpus = "^1.15"
tower = { version = "^0.4", features = ["util", "limit"] }
strum = "^0.26"
strum_macros = "^0.26"
derivative = "^2.2"
claxon = "^0.4"
async-recursion = "^1.0"
lazy_static = "^1.4"
dialoguer = "^0.11"
html-escape = "^0.2"
const_format = "^0.2"
futures-core = "^0.3"
bytes = "^1.5"
futures = "^0.3"
more-di = { version = "3.1.0", features = ["async", "builder"] }
colored = "2.1.0"

[build-dependencies]
built = "^0.7"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
#restriction = { level = "warn", priority = -2 }

module_inception = "allow"
just_underscores_and_digits = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
match_same_arms = "allow"
if_not_else = "allow"
enum_glob_use = "allow"
needless_pass_by_value = "allow"
unwrap_used = "warn"
missing_docs_in_private_items = "allow"
implicit_return = "allow"
expect_used = "allow"
indexing_slicing = "warn"
if_then_some_else_none = "allow"
str_to_string = "warn"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
non_ascii_literal = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
exhaustive_enums = "allow"
exhaustive_structs ="allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
tests_outside_test_module = "allow"
pub_use = "allow"
string_add = "allow"
mod_module_files = "allow"
wildcard_enum_match_arm = "warn"
unneeded_wildcard_pattern = "warn"
panic = "warn"
as_conversions = "allow"
absolute_paths = "allow"
get_first = "warn"
pattern_type_mismatch = "allow"
arithmetic_side_effects = "allow"
new_without_default = "allow"
integer_division = "warn"
separated_literal_suffix = "allow"
unseparated_literal_suffix = "warn"
# TODO COULD re-consider the following allows:
clone_on_ref_ptr = "allow"
unused_self = "allow"
wildcard_imports = "allow"
missing_errors_doc = "allow"
# TODO SHOULD investigate solution to await_holding_lock
await_holding_lock = "allow"
