[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/macros",
    "crates/options",
]
default-members = ["crates/core"]

[workspace.package]
edition = "2024"
authors = ["DevYukine <devyukine@gmx.de>", "RogueOneEcho"]
repository = "https://github.com/RogueOneEcho/caesura"
homepage = "https://github.com/RogueOneEcho/caesura"
license = "AGPL-3.0-only"

[workspace.dependencies]
# Internal crates
caesura = { path = "crates/core" }
caesura_macros = { version = "0.0.0", path = "crates/macros" }
caesura_options = { version = "0.0.0", path = "crates/options" }

bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
claxon = "0.4.3"
colored = "3.1.1"
dirs = "6.0.0"
fast_image_resize = { version = "6.0.0", features = ["image"] }
flat_db = "0.6.0"
futures = "0.3.32"
gazelle_api = "0.22.0"
humantime = "2.3.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
indicatif = "0.18.4"
insta = { version = "1.47.2", features = ["yaml"] }
inventory = "0.3.24"
lava_torrent = "0.11.1"
lofty = "0.24.0"
log = { version = "0.4.29", features = ["std"] }
miette = { version = "7.6.0", features = ["fancy"] }
more-di = { version = "3.2.1", features = ["async", "builder"] }
num_cpus = "1.17.0"
once_cell = "1.21.4"
qbittorrent_api = "0.6.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["rustls", "json", "multipart", "stream"], default-features = false }
rogue_logging = { version = "0.7.2", features = ["log", "miette"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
# Pinned to 0.10: 0.11 removes io::Write from hashers and the replacement crate (digest-io) is unusable
sha1 = "=0.10.6"
# Pinned to 0.10: 0.11 output type drops LowerHex and the replacement crate (base16ct) adds friction
sha2 = "=0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
unicode-width = "0.2.2"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_html_tags = "warn"
private_intra_doc_links = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

absolute_paths = "warn"
arithmetic_side_effects = "allow"
as_conversions = "warn"
cast_possible_truncation = "warn"
clone_on_ref_ptr = "allow"
enum_glob_use = "allow"
expect_used = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
get_first = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_return = "allow"
indexing_slicing = "warn"
integer_division = "warn"
just_underscores_and_digits = "allow"
match_same_arms = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
mod_module_files = "allow"
module_inception = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
neg_multiply = "allow"
new_without_default = "allow"
non_ascii_literal = "allow"
panic = "warn"
pattern_type_mismatch = "allow"
pub_use = "allow"
question_mark_used = "allow"
separated_literal_suffix = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
str_to_string = "warn"
struct_field_names = "allow"
string_add = "allow"
tests_outside_test_module = "allow"
unneeded_wildcard_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_self = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"
wrong_self_convention = "allow"
result_large_err = "allow"
await_holding_lock = "allow"
default_trait_access = "warn"
