[package]
name = "caesura"
edition.workspace = true
authors.workspace = true
description = "An all-in-one command line tool to transcode FLAC audio files and upload to gazelle based indexers/trackers"
repository.workspace = true
homepage.workspace = true
license.workspace = true
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
]
readme = "../../README.md"
version = "0.0.0"
publish = true

[[bin]]
name = "caesura"
path = "src/main.rs"

[lib]
name = "caesura"
path = "src/lib.rs"

[dependencies]
caesura_macros = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
claxon = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
flat_db = { workspace = true }
futures = { workspace = true }
gazelle_api = { workspace = true }
html-escape = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
lava_torrent = { workspace = true }
lofty = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
more-di = { workspace = true }
once_cell = { workspace = true }
num_cpus = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rogue_logging = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
fast_image_resize = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
gazelle_api = { workspace = true, features = ["mock"] }
image = { workspace = true }
insta = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
