[package]
name = "caesura_options"
version = "0.0.0"
description = "Options framework for caesura"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
inventory = { workspace = true }
log = { workspace = true }
more-di = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[features]
testing = []

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
